--- a/index.html
+++ b/index.html
@@ -3,56 +3,64 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Datos compartidos — Rango Excel</title>
+  <title>ATELIER - INVENTARIO DE PIEZAS </title>
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      margin:0; 
-      padding:16px; 
-      background:#f6f7fb; 
-      color:#222; 
-    }
-    .container { 
-      max-width:1200px; 
-      margin:0 auto; 
-    }
-    h1 { 
-      font-size:1.25rem; 
-      margin:0 0 12px; 
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 16px;
+      background: #f6f7fb;
+      color: #222;
     }
 
-    /* Contenedor para el iframe */
-    .iframe-wrap {
-      position: relative;
-      width: 100%;
-      height: 700px;
-      background:#fff;
-      border-radius:8px;
-      box-shadow:0 6px 18px rgba(0,0,0,0.06);
-      overflow: hidden;
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
-    .iframe-wrap iframe {
-      width:100%;
-      height:100%;
-      border:0;
+    h1 {
+      font-size: 1.25rem;
+      margin: 0 0 12px;
     }
+
+    h3 {
+      margin: 0 0 16px;
+      font-weight: normal;
+      color: #555;
+    }
+/* Contenedor para el iframe centrado */
+.iframe-wrap {
+  position: relative;
+  width: 90%;           /* ocupa el 90% del ancho del navegador */
+  height: 700px;
+  margin: 0 auto;       /* centra horizontalmente */
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+  overflow: hidden;
+}
+
+.iframe-wrap iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 
     /* Overlay para ocultar el botón "Ver libro a tamaño completo" */
     .hide-button {
       position: absolute;
       bottom: 0;
       right: 0;
-      width: 160px;   /* ajusta según el tamaño del botón */
-      height: 26px;   /* ajusta según el alto del botón */
-      background: #000;
+      width: 160px; /* ajusta según el tamaño del botón */
+      height: 26px; /* ajusta según el alto del botón */
+      background: #393b3e;
       border-top-left-radius: 6px;
     }
 
-    .note { 
-      margin-top:10px; 
-      font-size:0.9rem; 
-      color:#555; 
+    .note {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      color: #555;
     }
   </style>
 </head>
@@ -61,6 +69,7 @@
     <h1>INVENTARIO PIEZAS ATELIER</h1>
     <h3>C.M. Versión 0925</h3>
 
+    <!-- Iframe centrado -->
     <div class="iframe-wrap">
       <iframe 
         src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={91f9ea1d-93bb-4b88-ac32-850e06aad3a9}&action=embedview&Item=inventario_suministros&wdHideGridlines=True&wdInConfigurator=True&em=2&wdDownloadButton=False">
@@ -71,6 +80,7 @@
     <div class="note">
       ⚠️ Datos actualizados cada 3 minutos.
     </div>
+    
   </div>
 
   <script>
@@ -84,3 +94,4 @@
   </script>
 </body>
 </html>
+
