--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     }
 
     .container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
+  width: 100%;
+  max-width: none;
+  margin: 0 auto;
+}
 
     h1 {
       font-size: 1.25rem;
@@ -31,7 +32,7 @@
 /* Contenedor para el iframe centrado */
 .iframe-wrap {
   position: relative;
-  width: 90%;           /* ocupa el 90% del ancho del navegador */
+  width: 100%;           /* ocupa el 90% del ancho del navegador */
   height: 700px;
   margin: 0 auto;       /* centra horizontalmente */
   background: #fff;
@@ -94,4 +95,5 @@
   </script>
 </body>
 </html>
+
 
