--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
     <!-- Iframe centrado -->
     <div class="iframe-wrap">
       <iframe 
-        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={91f9ea1d-93bb-4b88-ac32-850e06aad3a9}&action=embedview&Item=inventario_suministros&wdHideGridlines=True&wdInConfigurator=True&em=2&wdDownloadButton=False">
+        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={d8cc8e9b-7694-45a6-bb1c-1700923b433c}&action=embedview&Item=inventario_suministros&wdInConfigurator=True&wdInConfigurator=True&wdDownloadButton=False">
       </iframe>
       <div class="hide-button"></div>
     </div>
 
+    
     <div class="note">
       ⚠️ Datos actualizados cada 3 minutos.
     </div>
@@ -95,5 +96,6 @@
   </script>
 </body>
 </html>
+
 
 
