--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
     <!-- Iframe centrado -->
     <div class="iframe-wrap">
       <iframe 
-        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={d8cc8e9b-7694-45a6-bb1c-1700923b433c}&action=embedview&Item=inventario_suministros&wdInConfigurator=True&wdInConfigurator=True&wdDownloadButton=False">
+        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={12e1e732-f50a-447f-9703-88d1f591920d}&action=embedview&ActiveCell='INVENTARIO%20SUMINISTROS'!A2&wdInConfigurator=True&wdInConfigurator=True">
       </iframe>
       <div class="hide-button"></div>
     </div>
-
     
     <div class="note">
       ⚠️ Datos actualizados cada 3 minutos.
@@ -96,6 +95,7 @@
   </script>
 </body>
 </html>
+
 
 
 
