--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Iframe centrado -->
     <div class="iframe-wrap">
       <iframe 
-        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={12e1e732-f50a-447f-9703-88d1f591920d}&action=embedview&ActiveCell='INVENTARIO%20SUMINISTROS'!A2&wdInConfigurator=True&wdInConfigurator=True">
+        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={12e1e732-f50a-447f-9703-88d1f591920d}&action=embedview&ActiveCell='INVENTARIO%20SUMINISTROS'!B14&Item=inventario_suministros&wdInConfigurator=True&wdInConfigurator=True">
       </iframe>
       <div class="hide-button"></div>
     </div>
@@ -95,6 +95,7 @@
   </script>
 </body>
 </html>
+
 
 
 
