--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
     <!-- Iframe centrado -->
     <div class="iframe-wrap">
       <iframe 
-        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={12e1e732-f50a-447f-9703-88d1f591920d}&action=embedview&ActiveCell='INVENTARIO%20SUMINISTROS'!B14&Item=inventario_suministros&wdInConfigurator=True&wdInConfigurator=True">
+        src="https://thebathcollection.sharepoint.com/sites/INTRANETBATHCO-Atelier/_layouts/15/Doc.aspx?sourcedoc={4f7dfa2f-fd7e-4c21-afa2-d73fe5ec93fc}&action=embedview&Item=inventario_suministros&wdInConfigurator=True&wdInConfigurator=True">
       </iframe>
       <div class="hide-button"></div>
     </div>
+
     
     <div class="note">
       ⚠️ Datos actualizados cada 3 minutos.
@@ -95,6 +96,7 @@
   </script>
 </body>
 </html>
+
 
 
 
